# WCSim_USJapan

./: CMakeLists.txt  Dockerfile.base  README.md
WCSim_build/WCSim_dev/: CMakeCache.txt  Makefile  README.md  SNS_Example.mac  WCSim_Library_Targets.cmake  cmake_install.cmake  cosmicflux.root  geofile.txt  install_manifest.txt  this_wcsim.sh  wcsim.root
WCSim_build/WCSim_dev/analysis/: .PrepareNQS_local.py.swp  PrepareNQS_local.py  compile.sh  nHit_PMT  nHit_PMT.C  nqs_list_local  read_PMT  read_PMT.C
WCSim_build/WCSim_dev/hk-BONSAI-1.2.1/: .gitignore  CMakeLists.txt  Dockerfile  GNUmakefile  README.md  dependencies.cmake  env_sukap.sh  geofile.txt  hk-BONSAIConfig.cmake.in  hkinstall.py  make.sh
WCSim_build/WCSim_dev/hk-BONSAI-1.2.1/bonsai/: CMakeLists.txt  WCSimBonsai.cc  WCSimBonsai.hh  bonsaifit.h  centroid.h  goodness.h  goodness.inl  hits.h  hitsel.h  likelihood.h  pmt_geometry.h  searchgrid.h  searchgrid.inl  timefit.cc  timefit.h  vertex.h
WCSim_build/WCSim_dev/hk-BONSAI-1.2.1/data/tuning/: create_like.cc  run.sh  show_like.cc
WCSim_build/WCSim_dev/hk-BONSAI-1.2.1/data/tuning/analysis_wcsim/: analysis.C  generate_t_minus_tof.C
WCSim_build/WCSim_dev/hk-BONSAI-1.2.1/rootbonsai/: loadincs.C  rootbonsai.C
WCSim_build/WCSim_dev/hk-BONSAI-1.2.1/sample-root-scripts/: sample_bonsai.C
macros/: daq.mac
sample-root-scripts/: read_PMT.C
setup/: env_sukap.sh
src/: WCSimDetectorConfigs.cc  WCSimDetectorConstruction.cc  WCSimDetectorMessenger.cc  WCSimEventAction.cc  WCSimPMTObject.cc  WCSimPrimaryGeneratorAction.cc  WCSimVisManager.cc
(+115 files in other folders)
